es-bs-base/scss/_nav.scss
// Base class
//
// Kickstart any navigation component with a set of style resets. Works with
// `<nav>`s, `<ul>`s or `<ol>`s.

.nav {
  display: flex;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.nav-link {
  display: block;
  padding: $nav-link-padding-y $nav-link-padding-x;
  text-decoration: if($link-decoration == none, null, none);

  @include hover-focus() {
    text-decoration: none;
  }

  // Disabled state lightens text
  &.disabled {
    color: $nav-link-disabled-color;
    pointer-events: none;
    cursor: default;
  }
}

//
// Tabs
//

.nav-tabs {
  border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;

  .nav-link {
    margin-bottom: -$nav-tabs-border-width;
    border: $nav-tabs-border-width solid transparent;
    @include border-top-radius($nav-tabs-border-radius);

    @include hover-focus() {
      border-color: $nav-tabs-link-hover-border-color;
    }

    &.disabled {
      color: $nav-link-disabled-color;
      background-color: transparent;
      border-color: transparent;
    }
  }

  .nav-link.active,
  .nav-item.show .nav-link {
    color: $nav-tabs-link-active-color;
    background-color: $nav-tabs-link-active-bg;
    border-color: $nav-tabs-link-active-border-color;
  }

  .dropdown-menu {
    // Make dropdown border overlap tab border
    margin-top: -$nav-tabs-border-width;
    // Remove the top rounded corners here since there is a hard edge above the menu
    @include border-top-radius(0);
  }
}


//
// Pills
//

.nav-pills {
  .nav-link {
    @include border-radius($nav-pills-border-radius);
  }

  .nav-link.active,
  .show > .nav-link {
    color: $nav-pills-link-active-color;
    background-color: $nav-pills-link-active-bg;
  }
}


//
// Justified variants
//

.nav-fill {
  > .nav-link,
  .nav-item {
    flex: 1 1 auto;
    text-align: center;
  }
}

.nav-justified {
  > .nav-link,
  .nav-item {
    flex-basis: 0;
    flex-grow: 1;
    text-align: center;
  }
}


// Tabbable tabs
//
// Hide tabbable panes to start, show them when `.active`

.tab-content {
  > .tab-pane {
    display: none;
  }
  > .active {
    display: block;
  }
}

//
// EnergySage Global Navigation
//

$desktop-min-width: 992px;
$mobile-max-width: $desktop-min-width - 1;

// Overlay that is displayed on navbar hovers on desktop, menu open on mobile
// pull overlay up to avoid it from getting covered by other DOM elements
.content-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(64, 64, 64, .45);
  display: none;
  z-index: 1000;
}

.nav-es-global {

  // add a background so veil goes under the nav
  background-color: white;

  // default should be size 14px according to figma
  font-size: 14px;

  // override es-ds default
  .btn-link {
    color: black;
  }

  // dropdown-menu items should be default size 14px
  .dropdown-menu {
    font-size: 14px;
  }

  // All links should have font-weight-normal (weight 400)
  a {
    font-weight: 400;
  }

  // Hide the default BS4 expansion indicator
  .dropdown-toggle::after {
    content: none;
  }

  // Hide elements only needed for the mobile navigation
  .dropdown-label, .menu-checkbox, .menu-header, .menu-toggle, .expand-icon {
    display: none;
  }

  // Override default blue background on hover and click
  .dropdown-item:hover, .dropdown-item:active {
    background: none;
  }

  // On Desktop a hovers display the dropdowns
  @media only screen and (min-width: $desktop-min-width) {
    // pull navbar up to avoid overlay from getting covered by other DOM elements
    z-index: 1000;

    // Allow dropdown content to take up the full width of the page
    .dropdown-full-page {
      position: static;
    }

    // Full expand top level nav's topics section
    .dropdown-menu-full-page {
      top: 65%;
      width: 100%;
    }

    // eyebrow copied from es-ds class, but override for letter spacing and only display on lg+ viewports
    .eyebrow-lg {
      font-size: 1rem;
      font-weight: 700;
      color: #292929;
      text-transform: uppercase;
      letter-spacing: 0.05em;
    }

    // Show top headers down chevron icon
    .nav-item {
      .top-header-icon {
        transform: rotate(0deg);
      }
    }

    // Show menu and up chevron icon nav-item hover
    .nav-item:hover {
      .dropdown-menu {
        display: block;
      }

      .top-header-icon {
        transform: rotate(180deg);
      }
    }

    // Top header hover should be gray
    .nav-item.top-header:hover {
      background: rgba(236, 236, 236, 1);

      // Top header menu background should be gray
      .dropdown-menu {
        background: rgba(236, 236, 236, 1);
      }
    }

    // Position person icon and dropdown menu
    .icon-dropdown {
      display: inline-block;
      position: relative;
    }

    // Fix top header logged in/logged out state section with a fixed width
    .icon-dropdown .container {
      width: 225px;
    }

    // Fix width of the dropdown menu on person icon hover
    .icon-dropdown .dropdown-menu {
      width: 250px;
    };

    // Style first name with truncation and default not shown
    .icon-dropdown .dropdown-toggle .first-name {
      display: none;
      max-width: 200px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    // Place EnergyTips topic in a row instead of a column on desktop dropdown
    .topic-group {
      float: left;
    }
  }

  // A lot of custom styles for the mobile navigation menu
  @media only screen and (max-width: $mobile-max-width) {
    // Set collapsed navbar height
    height: 56px;

    // Force navigation items to align to the top and avoid conflict with other components on the page
    // Ensure menus are visible above overlay
    .navbar-collapse {
      align-items: start;
      z-index: 1000;
    }

    // Allow the dropdowns to overlap each other
    .dropdown {
      position: unset;
    }

    // Position the menu at the top (leave some room for the header -- this seems hacky, could we set this to top:0?)
    // Make menu scrollable, prevent it from making the page longer
    // Prevent horizontal scrolling on menu
    .dropdown-menu {
        top: 64px;
        max-height: 100%;
        overflow: scroll;
        padding: 0;
        display: flex !important;
    }

    // Prevent horizontal scrolling on menu
    .dropdown-menu-full-page {
      display: flex !important;
    }

    // Hide the desktop dropdown toggle because mobile uses the labels as toggles
    .dropdown-toggle {
        display: none;
    }
    // Style the label as a proper tappable block target
    .dropdown-label {
        cursor: pointer;
        display: block;
    }

    // Show chevrons on mobile
    .expand-icon {
      display: flex;
    }

    // Style rows in hamburger, add bottom border
    .nav-item {
      height: 64px;
      margin: 0px 15px;
      border-bottom: solid #DBDBDB 1px !important;
      align-items: center;
    }

    // Override default margin to allow centered titles
    .dropdown-label.nav-link {
      margin-bottom: 0;
    }

    // Style the menu for mobile navigation bit but use translate to keep it off screen
    .menu {
        max-height: 100%;
        max-width: 540px;
        min-width: 300px;
        background: #fff;
        flex-direction: column;
        height: 100%;
        left: 0;
        min-height: 100vh;
        position: absolute;
        top: 0;
        transform: translate3d(-100%, 0, 0);
        transition: transform 0.2s;
        width: 100%;

        ul {
          overflow: scroll;
        }
    }

    // Avoid top level nav's subtopics level menu from laying on its topic level menu
    .submenu {
      position: fixed;
      z-index: 2;
    }

    // The menu after any checked checkboxes is translated on screen
    .menu-checkbox:checked + .menu {
        transform: translate3d(0, 0, 0);
    }

    // The menu header
    .menu-header {
        border-bottom: solid #DBDBDB 1px;
        display: flex;
        height: 64px;
        width: 100%;
        font-weight: bolder;
        align-items: center;
        max-height: 64px;
    }

    // This is a generic placeholder button for open/close/back in the mobile menu
    .menu-toggle {
        vertical-align: center;
        cursor: pointer;
        display: flex;
    }

    // Override BS4 defaults for consistency
    .menu {
      ul, li {
        border: none;
        width: 100%;
        display: block;
      }
      li {
        display: flex;
        justify-content: space-between;
      }
    }
  }
}

